examples/noop-controller/manifests/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noop-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noop-controller
  template:
    metadata:
      labels:
        app: noop-controller
    spec:
      containers:
      - name: noop-controller
        image: summerwind/noop-controller:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/tls
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
      volumes:
      - name: secret-volume
        secret:
          secretName: noop-controller
          items:
          - key: server.pem
            path: server.pem
          - key: server-key.pem
            path: server-key.pem
      serviceAccountName: noop-controller
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: noop-controller
  namespace: kube-system
spec:
  selector:
    app: noop-controller
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8001
