examples/noop-controller/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: noop-controller
webhooks:
- name: noop.whitebox.summerwind.github.io
  rules:
  - apiGroups:
    - "whitebox.summerwind.github.io"
    apiVersions:
    - "*"
    resources:
    - noop
    operations:
    - CREATE
    - UPDATE
  failurePolicy: Fail
  clientConfig:
    service:
      name: noop-controller
      namespace: kube-system
      path: /noop.whitebox.summerwind.github.io/v1alpha1/validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJxRENDQVU2Z0F3SUJBZ0lVRjlnSkl0T0xuaWVhdkRsWXRlcmhFeW5yRXhJd0NnWUlLb1pJemowRUF3SXcKTWpFT01Bd0dBMVVFQmhNRlNtRndZVzR4RGpBTUJnTlZCQWdUQlZSdmEzbHZNUkF3RGdZRFZRUURFd2RTYjI5MApJRU5CTUI0WERURTVNRE15TnpBek1Ua3dNRm9YRFRJME1ETXlOVEF6TVRrd01Gb3dNakVPTUF3R0ExVUVCaE1GClNtRndZVzR4RGpBTUJnTlZCQWdUQlZSdmEzbHZNUkF3RGdZRFZRUURFd2RTYjI5MElFTkJNRmt3RXdZSEtvWkkKemowQ0FRWUlLb1pJemowREFRY0RRZ0FFaWY4MVJUSTBnbjdEVW1rVmxGcWxyaVZMS3piVU5Rb3JaK3U2Q2VhTgowczZNS3FyRWpINW [...]
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: noop-controller
webhooks:
- name: noop.whitebox.summerwind.github.io
  rules:
  - apiGroups:
    - "whitebox.summerwind.github.io"
    apiVersions:
    - "*"
    resources:
    - noop
    operations:
    - CREATE
    - UPDATE
  failurePolicy: Fail
  clientConfig:
    service:
      name: noop-controller
      namespace: kube-system
      path: /noop.whitebox.summerwind.github.io/v1alpha1/mutate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJxRENDQVU2Z0F3SUJBZ0lVRjlnSkl0T0xuaWVhdkRsWXRlcmhFeW5yRXhJd0NnWUlLb1pJemowRUF3SXcKTWpFT01Bd0dBMVVFQmhNRlNtRndZVzR4RGpBTUJnTlZCQWdUQlZSdmEzbHZNUkF3RGdZRFZRUURFd2RTYjI5MApJRU5CTUI0WERURTVNRE15TnpBek1Ua3dNRm9YRFRJME1ETXlOVEF6TVRrd01Gb3dNakVPTUF3R0ExVUVCaE1GClNtRndZVzR4RGpBTUJnTlZCQWdUQlZSdmEzbHZNUkF3RGdZRFZRUURFd2RTYjI5MElFTkJNRmt3RXdZSEtvWkkKemowQ0FRWUlLb1pJemowREFRY0RRZ0FFaWY4MVJUSTBnbjdEVW1rVmxGcWxyaVZMS3piVU5Rb3JaK3U2Q2VhTgowczZNS3FyRWpINW [...]
